<resources>
    <string name="app_name">Thermodroid</string>
    <string name="current_temp_desc">Current temperature</string>
    <string name="current_temp">%1$s \u00B0C</string>
    <string name="degrees_celcius"> \u00B0C</string>
    <string name="time">%1$s %2$s</string>
    <string name="target_temperature">Target temperature</string>
    <string name="connection_message">The thermostat couldn\'t be reached. You can try selecting a
        different server in the upper-right menu or click anywhere to try again.</string>
    <string name="week_program">Week program</string>
    <string name="week_program_period">%1$s\u2014%2$s</string>
    <string name="day_program_empty">No day periods</string>
    <string name="action_restore">Reset to default</string>
    <string name="action_delete">Delete week program</string>
    <string name="action_add">Add a day program</string>
    <string name="day_temperature">Day temperature</string>
    <string name="night_temperature">Night temperature</string>
    <string name="temperature_too_low">The temperature was too low,
        it is set to 5.0 \u00B0C.</string>
    <string name="temperature_too_high">The temperature was too high,
        it is set to 30.0 \u00B0C.</string>
    <string name="set_unlocked">Unlock</string>
    <string name="set_locked">Lock</string>
    <string name="rest_week_program">Reset week program to default?</string>
    <string name="delete_week_program">Delete all week program items?</string>
    <string name="time_out_of_range">The given time is outside of the possible range.</string>
    <string name="change_server">Change server</string>
    <string name="dash">\u2014</string>

    <string-array name="week_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="font_body1">sans-serif</string>
    <string name="font_body2">sans-serif-medium</string>
    <string name="title_activity_week_program">Week program</string>
    <string name="up">Up</string>
    <string name="lock">Lock</string>
    <string name="down">Down</string>
</resources>
