<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nl.maartenvisscher.thermodroid.WeekProgramActivity">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_restore_black_24dp"
        android:title="@string/action_restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
