<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/focusable_layout"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:baselineAligned="false"
    android:elevation="2dp"
    android:focusableInTouchMode="true"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/day_temperature"
            android:src="@drawable/ic_brightness_7_black_24dp" />

        <EditText
            android:id="@+id/day_temperature_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:fontFamily="@string/font_body2"
            android:inputType="number|numberDecimal"
            android:selectAllOnFocus="true"
            android:textColor="@color/light_bg_primary_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/day_temperature_view"
            android:layout_toRightOf="@+id/day_temperature_view"
            android:fontFamily="@string/font_body2"
            android:text="@string/degrees_celcius"
            android:textColor="@color/light_bg_primary_text"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/night_temperature"
            android:src="@drawable/ic_brightness_3_black_24dp" />

        <EditText
            android:id="@+id/night_temperature_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:fontFamily="@string/font_body2"
            android:inputType="number|numberDecimal"
            android:selectAllOnFocus="true"
            android:textColor="@color/light_bg_primary_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/night_temperature_view"
            android:layout_toRightOf="@+id/night_temperature_view"
            android:fontFamily="@string/font_body2"
            android:text="@string/degrees_celcius"
            android:textColor="@color/light_bg_primary_text"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>
